# cumulobert

./: .gitignore  CumulObert.ipynb  CumulObert_old.ipynb  INSTRUCTIONS.md  README  isocrones_mod.csv  magnituds_NGC6633.csv  pyproject.toml  requirements.txt
.ipynb_checkpoints/: CumulObert-checkpoint.ipynb
cumulobert/: README  cluster_image.py  errors.py  external_catalogue.py
cumulobert/app/: FUTURE_UPDATES  cumulobert_app.py  find_star_settings_dialog.py  image_view.py  invert_axis_dialog.py  load_actions.py  main_window.py  query_catalogue_dialog.py  results_V.csv  stars_table_view.py  utils.py
cumulobert/data/: NGC6633-001V_5.fit  new-image.reg  new_image_info.txt  results_dani.csv  test.py
data/: 1_CSV_NGC6633.csv  2_CSV_NGC6633.csv  NGC6633_JB_calib.fits  NGC6633_JV_calib.fit  tab_mags_JB.csv  tab_mags_JV.csv
dev_tools/: pylint_check.sh
